Legend :	+=addition		*=change	!=bug
---------------------------------------------------
V1.7.3 (Final)
--------------
! VSTs that call the psycle host callback with a NULL pointer can't crash psycle any more (pooplog)
! XM import doesn't spam machine columns with 00 any more. (pooplog)
! Old Fileformat songs did not load the master volume (was set always to 0)
! Crash with Linplug's VST's when loading songs with the
! small Memory leak fixed (had to do with new ASIO implementation)
! Bug with Machine exchange (wolumes where messed when the change was native for VST)
! asio hard clips for the babies who don't leave any headroom (pooplog)
! some memory leaks and access violation [JAZ]
! cloning locates the new machine better and numbers it correctly (pooplog)
! fix for trying to allocate patterns greater than 7F (pooplog)
! fix for panning not being properly set on load (pooplog)
* changed so that 255 unique patterns can be stored, although only 127 can be sequenced (pooplog)

V1.7.3 RC2
----------
! whoops - fixed the dsound config dialog (pooplog)
! whoops - fixed the unable to load many types of wave files issue (pooplog)
! whoops - fixed the note-off bug while recording (pooplog)
! whoops - loading a song moves to the top of the sequence again (pooplog)
! whoops - fixed the tempo not set before machines loaded bug- made crossdelay 
  have wrong tempo on tick mode (pooplog)
! whoops - there were 2 warnings on loading a song (pooplog)
+ vu meter can be turned off from the theme dialog (pooplog)
* All-new high-performance ASIO implementation - MSB float mode not done yet (pooplog)

V1.7.3 RC1
----------
+ double clicking on pattern highlights that track (pooplog)
+ 64 tracks available! (might break some machines?) (pooplog)
+ play from start button (pooplog)
+ psycle now appends names of new machines with a counter if duplicate name exists (pooplog)
+ psycle can display machines' number (ie 02:Sampler) - toggleable (pooplog)